diagram for urate transporters and updated some citation keys

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -65,11 +65,17 @@ The benefits of urate include the its ability to increase blood pressure and it 
 <!-- ?? The fructose response for leads to insulin desensitivity @Johnston2007? -->
 <!--     - fructose blocks glyconeogeneis -> increased glycogen storage -->
 
-An increased level of urate in the blood is called \gls{hu} and is causal of gout [@choi_pathogenesis_2005]. The prevalence of \gls{hu} in Polynesian populations is higher than many other populations [@Gosling2014], and co-morbid with it are higher prevalences of the co-morbidities of gout, diabetes, obesity, dyslipidaemia, kidney disease, and \gls{cvd} [@Winnard2013]. In New Zealand, gout prevalence is ~3.1%, however, prevalence in M\tex{\={a}}ori and Pacific peoples is 6-8% with 40% of individuals with gout also having diabetes or \gls{cvd} [@Winnard2013]. Gout is an immune response to the monosodium urate crystals that are formed from the precipitation of urate from the blood, with \gls{hu} being a prerequisite for the formation of these crystals [@Merriman2011a].
+An increased level of urate in the blood is called \gls{hu} and is causal of gout [@Choi2005a]. The prevalence of \gls{hu} in Polynesian populations is higher than many other populations [@Gosling2014], and co-morbid with it are higher prevalences of the co-morbidities of gout, diabetes, obesity, dyslipidaemia, kidney disease, and \gls{cvd} [@Winnard2013]. In New Zealand, gout prevalence is ~3.1%, however, prevalence in M\tex{\={a}}ori and Pacific peoples is 6-8% with 40% of individuals with gout also having diabetes or \gls{cvd} [@Winnard2013]. Gout is an immune response to the monosodium urate crystals that are formed from the precipitation of urate from the blood, with \gls{hu} being a prerequisite for the formation of these crystals [@Merriman2011a].
 
 <!-- \Gls{hu} in the Pacific is seen in Eastern and Western Polynesia, but the prevalence in the ancestral populations of Near and Remote Oceania is reduced. However, Taiwanese aboriginals also have the higher prevalence of \gls{hu} [@Gosling2014]. -->
 
-\Gls{hu} has two main components: overproduction of urate, and under-excretion. Overproduction is influenced by diet, such as high purine or fructose content, or increased cell turnover as observed in cancer, or under genetic control. Under-excretion is the main cause of \gls{hu}, caused by either increased reabsorption or decreased secretion. The kidneys are the organ where the majority of secretion and excretion of urate is performed, with about 90% of urate being reabsorbed [@Kutzing2008]. In the proximal tubule, on the apical membrane, the urate transporters of URAT1, OAT4, and GLUT9 (encoded by _SLC2A9_) reabsorb urate, whereas ABCC4, NPT4, and NPT1 are responsible for secretion [@Mandal2015]. On the basolateral membrane, OAT1-3, increase intracellular uric acid, but GLUT9 moves uric acid from intracellular to extracellular [@Mandal2015]. The ATP powered transporter ABCG2 is responsible for excretion of urate in the gut and there are \glspl{snp} that lead to a reduction of function in ABCG2 in all populations [@Phipps-Green2010;@Cleophas2017]. Together the genes _SLC2A9_ and _ABCG2_ account for 3.4% of the genetic variability of urate [@Kottgen2013].
+\Gls{hu} has two main components: overproduction of urate, and under-excretion. Overproduction is influenced by diet, such as high purine or fructose content, or increased cell turnover as observed in cancer, or under genetic control. Under-excretion is the main cause of \gls{hu}, caused by either increased reabsorption or decreased secretion. The kidneys are the organ where the majority of secretion and excretion of urate is performed, with about 90% of urate being reabsorbed [@Kutzing2008]. In the proximal tubule, on the apical membrane, the urate transporters of URAT1 (_SLC22A12_), OAT4 (_SLC22A11_), and GLUT9 (_SLC2A9_) reabsorb urate, whereas ABCC4, NPT4 (_SLC17A3_), and NPT1 (_SLC17A1_) are responsible for secretion (Figure \@ref(fig:urateTransporters)) [@Mandal2015]. On the basolateral membrane, OAT1-3 (_SLC22A6-8_), increase intracellular uric acid, but GLUT9 moves uric acid from intracellular to extracellular [@Mandal2015]. The ATP powered transporter ABCG2 is responsible for excretion of urate in the gut and there are \glspl{snp} that lead to a reduction of function in ABCG2 in all populations (Figure \@ref(fig:urateTransporters)) [@Phipps-Green2010;@Cleophas2017]. Together the genes _SLC2A9_ and _ABCG2_ account for 3.4% of the genetic variability of urate [@Kottgen2013].
+
+```{r urateTransporters, echo = FALSE, fig.cap = '(ref:urateTransporters)'}
+knitr::include_graphics("images/03_selectionpipeline/urate_excretion_diagram.png")
+```
+
+(ref:urateTransporters) Diagram representing the urate transporters in the gut (entrocyte) and kidney (renal proximal tubule cell). Direction of urate movement is indicated by arrows. Adapted from @Major2018.
 
 From previous studies there is prior evidence of selection at urate associated loci [@Zhang2013a; @Grossman2013; @Ramos2017]. In the review from @Ramos2017 on natural selection in rheumatic disease, one of the main loci for gout, _SLC2A9_, in the \gls{yri} population was reported as having been selected. The region of _BCAS3_ and _NACA2_ also had evidence, originally found by @Grossman2013 in the Asian population from the HapMap project data. @Zhang2013a had evidence for the urate-associated loci of _ATXN2_ (rs653178) and _RREB1_ (rs675209) having undergone selection when using a F~ST~-based method. The co-morbidities of \gls{hu} also show signs of selection, with loci associated with \gls{t2d} having been reported as having undergone selection [@pickrell2009signals; @voight2006map; @Grossman2010; @Grossman2013]. Most recently a Samoan specific variant in _CREBRF_ that is protective for \gls{t2d} but causal for obesity has also been identified as having evidence of selection in the Samoan population [@Minster2016].
 
@@ -3018,10 +3024,10 @@ sig_ihs_val %>% filter(genename %in% malaria_GR$SYMBOL) %>% select(-gene_chrom, 
 
 Urate has a central role in malarial infection and triggering an immune response [@GallegoDelgado2014]. Given that immune response is a strong candidate to be under selective pressure, malaria associated genes were looked at to see if there were signals of selection. From the GWAS catalog there were two genes that had been associated with malaria at a genome-wide significance threshold (of three, see Table \@ref(tab:gwascatref) for references), that also had evidence of selection with the Polynesian populations. The two genes that also had significant \gls{ihs} scores with Polynesian populations were _ABO_ and _ATP2B4_. 
 
-_ABO_ was the only gene that had significant markers in all four Polynesian populations out of the malaria-associated genes, and this was only for \gls{ihs}. All of the markers with significant \gls{ihs} in _ABO_ were in favour of the derived allele haplotype. \Gls{cim} had two markers that were significant, the first, rs1053878, was also significant in \gls{ton}. The second marker, rs55764262, was significant in \gls{cim}, \gls{nzm}, and \gls{sam}, and was not in \gls{ld} with rs549446 (\gls{eas} R^2^ = 0.003). Rs549446 was significant in both \gls{chs} and \gls{jpt}. There were no windows from the frequency-based statistics that met the significance threshold. _ABO_ has also been associated with obesity in \gls{gwas} [@comuzzie2012novel]. The marker rs8176741 had been associated with severe malaria [@Timmann2012], however, this marker had a significant \gls{ihs} in \gls{fin} but no other populations. The other \glspl{snp} that showed significance for \gls{ihs} were not in \gls{ld} (\gls{eas} R^2^ = 0.002) with rs55764262, for which \gls{cim}, \gls{nzm} and \gls{sam} all had a significant result. Both \gls{cim} and \gls{ton} had a different marker (rs1053878) that was significant for \gls{ihs} in _ABO_.
+_ABO_ was the only gene that had significant markers in all four Polynesian populations out of the malaria-associated genes, and this was only for \gls{ihs}. All of the markers with significant \gls{ihs} in _ABO_ were in favour of the derived allele haplotype. \Gls{cim} had two markers that were significant, the first, rs1053878, was also significant in \gls{ton}. The second marker, rs55764262, was significant in \gls{cim}, \gls{nzm}, and \gls{sam}, and was not in \gls{ld} with rs549446 (\gls{eas} R^2^ = 0.003). Rs549446 was significant in both \gls{chs} and \gls{jpt}. There were no windows from the frequency-based statistics that met the significance threshold. _ABO_ has also been associated with obesity in \gls{gwas} [@comuzzie2012novel]. The marker rs8176741 had been associated with severe malaria [@timmann2012genome], however, this marker had a significant \gls{ihs} in \gls{fin} but no other populations. The other \glspl{snp} that showed significance for \gls{ihs} were not in \gls{ld} (\gls{eas} R^2^ = 0.002) with rs55764262, for which \gls{cim}, \gls{nzm} and \gls{sam} all had a significant result. Both \gls{cim} and \gls{ton} had a different marker (rs1053878) that was significant for \gls{ihs} in _ABO_.
 
 
-Both \gls{sam} and \gls{nzm} had \glspl{snp} that were significant for \gls{ihs} in _ATP2B4_, \gls{sam} had rs10494845, and \gls{nzm} had rs142206068, both were in favour of the derived allele haplotype. The malaria-associated variant was rs10900585 [@Timmann2012]. All three variants were not in \gls{ld} with each other (\gls{eas} R^2^ = 0.00). The \gls{ld} was calculated using the full \gls{1kgp} marker list for \gls{eas} because rs10900585 was not on the CoreExome \gls{snp} array. 
+Both \gls{sam} and \gls{nzm} had \glspl{snp} that were significant for \gls{ihs} in _ATP2B4_, \gls{sam} had rs10494845, and \gls{nzm} had rs142206068, both were in favour of the derived allele haplotype. The malaria-associated variant was rs10900585 [@timmann2012genome]. All three variants were not in \gls{ld} with each other (\gls{eas} R^2^ = 0.00). The \gls{ld} was calculated using the full \gls{1kgp} marker list for \gls{eas} because rs10900585 was not on the CoreExome \gls{snp} array. 
 
 
 ```{r}
