additional backgrounding/interpretation of the PCA/admixture and whole chr clustering

--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -143,8 +143,7 @@ Disease associated markers and their annotated genes were downloaded from the \g
 <!-- > talk about the nice groupings from the pca -->
 
 <!-- > need to explain why K = 6 for the rest of the analysis -->
-
-The genetic variation captured by \gls{pca} was plotted to visualise the relationship of individuals to one another (Figure \@ref(fig:allpopPCA)). Starting from \gls{pc} 1, each subsequent \gls{pc} captured less of the variation than the previous. \Glsentrydescplural{pc} for the merged \gls{1kgp} data and the New Zealand samples showed in the first two components (which capture the most variation) that the \gls{afr}, \gls{eur}, and \gls{sas} super populations all formed separate groupings. \Gls{pc} 1 was responsible for separating the \gls{afr} populations from the others, and \gls{pc} 2 was largely responsible for separating the \gls{eur} and \gls{sas} from each other, and from the \gls{eas} and \gls{pol} populations. The \gls{eas} and \gls{pol} populations were extremely similar in \gls{pc} 1 but the \gls{pol} populations were spread with \gls{pc} 2, with the majority of the spread being accounted for by the Eastern Polynesian populations whereas the Western Polynesian populations had a tight grouping at -0.025 on \gls{pc} 2, slightly below the \gls{eas} group. This can be observed when \gls{pc} 6 is used to separate the Polynesian populations (Figure \@ref(fig:polPCA)). \Gls{pc} 3 separated the \gls{pol} populations from the \gls{eas} populations (Figure \@ref(fig:allpopPCA) B) and \gls{pc} 4 separated the \gls{amr} and \gls{sas} populations (Figure \@ref(fig:allpopPCA) C). The Polynesian populations were split into Eastern and Western Polynesian sub-groups with \gls{pc} 6 (Figure \@ref(fig:polPCA)).
+In order to confirm that individuals from a population were genetically similar \gls{pca} was performed. It was expected that there would be higher genetic variation between populations, than between individuals of a population. It was also used to confirm if the differences between populations was likely influenced by difference in genotyping platform. The genetic variation captured by \gls{pca} was plotted to visualise the relationship of individuals to one another (Figure \@ref(fig:allpopPCA)). Starting from \gls{pc} 1, each subsequent \gls{pc} captured less of the variation than the previous. \Glsentrydescplural{pc} for the merged \gls{1kgp} data and the New Zealand samples showed in the first two components (which capture the most variation) that the \gls{afr}, \gls{eur}, and \gls{sas} super populations all formed separate groupings. \Gls{pc} 1 was responsible for separating the \gls{afr} populations from the others, and \gls{pc} 2 was largely responsible for separating the \gls{eur} and \gls{sas} from each other, and from the \gls{eas} and \gls{pol} populations. The \gls{eas} and \gls{pol} populations were extremely similar in \gls{pc} 1 but the \gls{pol} populations were spread with \gls{pc} 2, with the majority of the spread being accounted for by the Eastern Polynesian populations whereas the Western Polynesian populations had a tight grouping at -0.025 on \gls{pc} 2, slightly below the \gls{eas} group. This can be observed when \gls{pc} 6 is used to separate the Polynesian populations (Figure \@ref(fig:polPCA)). \Gls{pc} 3 separated the \gls{pol} populations from the \gls{eas} populations (Figure \@ref(fig:allpopPCA) B) and \gls{pc} 4 separated the \gls{amr} and \gls{sas} populations (Figure \@ref(fig:allpopPCA) C). The Polynesian populations were split into Eastern and Western Polynesian sub-groups with \gls{pc} 6 (Figure \@ref(fig:polPCA)). This confirmed that the genetic variation was higher between populations, than between individuals of a population, and indicated how genetically similar or dis-similar populations were to each other. Populations that were thought to have a large degree of admixture also indicated as such by the spread, and overlap with other better defined clusters. 
 
 The admixture of the \gls{amr} populations [@1KGP2015snp] was evident in \gls{pc} 1 with a large spread centred with the \gls{eur} populations. The first four \gls{pc} indicated that the six super populations could form super population clusters based on the genetic variation. There was no distinction between the \gls{ceu}, \gls{gbr}, and \gls{nzc} populations (Figure \@ref(fig:eurPCA)), this indicated that the use of \gls{snp} array versus sequence data was not a major source of variability in the dataset. 
 
@@ -197,7 +196,7 @@ Admixture analysis is a method that can be used to infer the number of ancestral
 
 
 
-When the ancestral proportions for K = 11 were plotted for each individual for each population, there were some clear similarities amongst the super populations (Figure \@ref(fig:admix)). Within the \gls{afr} populations there were three main ancestral populations, which correlated with geography, with the East African population of \gls{lwk} being most different to the West African populations (\gls{esn}, \gls{yri}, \gls{gwd}, and \gls{msl}). The populations of \gls{acb} and \gls{asw} showed signs of admixture with similarities to the ancestral populations in the West African populations, with smaller proportions from the ancestral populations of \gls{lwk}, and the European populations. The \gls{eas} populations were represented by two ancestral populations. \Gls{cdx} was mostly one, and \gls{jpt} mostly the other, the remaining \gls{eas} populations were mixtures of the two. A single ancestral population represented \gls{sas}, but there were indications of admixture with the ancestral populations of the \gls{eur} and \gls{eas} populations. In the \gls{eur} populations there was again two main ancestral populations, they correlated with North and South Europe. One ancestral population was mostly in \gls{fin}, and the other mostly in \gls{tsi} and \gls{ibs}. \gls{gbr}, \gls{ceu}, and \gls{nzc} were all extremely similar in proportions of the two and ancestral populations. The \gls{amr} populations were mostly differing proportions of the ancestral population that \gls{tsi} had, and an ancestral population that was only in the \gls{amr} populations. There were also small proportions of the ancestral populations that made up the West African populations. The \gls{pol} populations had two ancestral populations, one found in the East Polynesian populations, and the other in the West Polynesian populations. All Polynesian populations had indications of small amounts of admixture with the ancestral populations of the \gls{eur} populations, with the East Polynesian populations having a higher amount than the West Polynesian populations. This analysis was consistent with the results of the \gls{pca}, and other admixture analysis [@1KGP2015snp; @Hellenthal2014], but also showed that there were sub-groups within the super-populations.
+To understand the similarities in ancestral background and levels of admixture present at a population level the ancestral proportions for K = 11 were plotted for each individual for each population revealing there were some clear similarities amongst the super populations (Figure \@ref(fig:admix)). Within the \gls{afr} populations there were three main ancestral populations, which correlated with geography, with the East African population of \gls{lwk} being most different to the West African populations (\gls{esn}, \gls{yri}, \gls{gwd}, and \gls{msl}). The populations of \gls{acb} and \gls{asw} showed signs of admixture with similarities to the ancestral populations in the West African populations, with smaller proportions from the ancestral populations of \gls{lwk}, and the European populations. The \gls{eas} populations were represented by two ancestral populations. \Gls{cdx} was mostly one, and \gls{jpt} mostly the other, the remaining \gls{eas} populations were mixtures of the two. A single ancestral population represented \gls{sas}, but there were indications of admixture with the ancestral populations of the \gls{eur} and \gls{eas} populations. In the \gls{eur} populations there was again two main ancestral populations, they correlated with North and South Europe. One ancestral population was mostly in \gls{fin}, and the other mostly in \gls{tsi} and \gls{ibs}. \gls{gbr}, \gls{ceu}, and \gls{nzc} were all extremely similar in proportions of the two and ancestral populations. The \gls{amr} populations were mostly differing proportions of the ancestral population that \gls{tsi} had, and an ancestral population that was only in the \gls{amr} populations. There were also small proportions of the ancestral populations that made up the West African populations. The \gls{pol} populations had two ancestral populations, one found in the East Polynesian populations, and the other in the West Polynesian populations. All Polynesian populations had indications of small amounts of admixture with the ancestral populations of the \gls{eur} populations, with the East Polynesian populations having a higher amount than the West Polynesian populations. This analysis was consistent with the results of the \gls{pca}, and other admixture analysis [@1KGP2015snp; @Hellenthal2014], but also showed that there were sub-groups within the super-populations. The low level of admixture in the Polynesian populations also indicated it confounding role in subsequent analyses would be minimal.
 
 
 
@@ -252,7 +251,7 @@ rm(ref,ref_fam)
 
 #### Whole chromosome clustering
 
-Clustering on the full chromosome results for all chromosomes from PopGenome (Figure \@ref(fig:multichrplot)) did not group the populations of each super population together, with the exception of \gls{fwh}, which grouped all super populations, although it split the \gls{amr} populations into two subgroups. \gls{td} grouped the \gls{eur} and most of the \gls{sas} super populations, and had smaller sub-super population groupings of two to three populations. \Gls{cim}, \gls{nzm}, and \gls{sam} were grouped with two \gls{amr} populations, (\gls{pel} and \gls{mxl}), and this group was the least similar to the others. There was no clear pattern to the clustering order of \gls{flf}, although it did have a few small groups of the same super population of no more than three individual populations. The \gls{cim} and \gls{sam} populations were grouped together for both statistics. \Gls{ze} clustered the \gls{afr} populations together and this cluster was the least similar to the other populations. There was also a grouping of the \gls{eas} populations which had the Western Polynesian populations as part of it.
+In order to establish at a summary genome level how similar populations were by selection and neutrality statistic were, clustering on each statistic summarising each chromosome was done. Clustering on the full chromosome results for all chromosomes from PopGenome (Figure \@ref(fig:multichrplot)) did not group the populations of each super population together, with the exception of \gls{fwh}, which grouped all super populations, although it split the \gls{amr} populations into two subgroups. \gls{td} grouped the \gls{eur} and most of the \gls{sas} super populations, and had smaller sub-super population groupings of two to three populations. \Gls{cim}, \gls{nzm}, and \gls{sam} were grouped with two \gls{amr} populations, (\gls{pel} and \gls{mxl}), and this group was the least similar to the others. There was no clear pattern to the clustering order of \gls{flf}, although it did have a few small groups of the same super population of no more than three individual populations. The \gls{cim} and \gls{sam} populations were grouped together for both statistics. \Gls{ze} clustered the \gls{afr} populations together and this cluster was the least similar to the other populations. There was also a grouping of the \gls{eas} populations which had the Western Polynesian populations as part of it. This indicated that at a summary level many of the populations within a superpopulation were similar to each other.
 
 ```{r superGlobalSummary, echo = FALSE, results = 'asis'}
 global_super_summary <- readRDS('~/data/NZ_coreExome_1kgp/100kbWindow_intra/filtered/100kbwindows_summary_superpop_popgenome_filtered_3ns_resized.6-11-2017.RDS') %>% filter(stat != 'Fu.Li.D')
@@ -342,7 +341,7 @@ metsyn$mat_d["Fu.Li.D"] <- NULL
 metsyn$prop["Fu.Li.D"] <- NULL
 ```
 
-Hierarchical clustering of the distribution extremes for each population was done to investigate if there was a similarity between populations and the genetic regions that had the most extreme scores. For the frequency spectrum methods, the 1^st^ and 99^th^ percentiles of windows (i.e., distribution tails) by statistic value were calculated, and a binary matrix of sharing of significant windows between populations was used for the clustering. For the haplotypic methods, the proportion of regions that overlapped between populations was used to create the distance matrix for the hierarchical clustering. The groups created by the clustering were then assessed for the number of populations from a super population that were assigned the same cluster. Having all populations correctly grouped into their super population was only completely achieved by clustering using the lower tail of \gls{fwh}. If an allowance is made for the two \gls{amr} populations to be grouped with the \gls{eur} populations, as in the chromosomal F~ST~ clustering, then both haplotypic methods and six of the clustered tails of the frequency spectrum-based methods clustered populations into their respective super populations.
+Hierarchical clustering of the distribution extremes for each population was done to investigate if there was a similarity between populations and the genetic regions that had the most extreme scores. For the frequency spectrum methods, the 1^st^ and 99^th^ percentiles of windows (i.e., distribution tails) by statistic value were calculated, and a binary matrix of sharing of significant windows between populations was used for the clustering. This was done with the premise being that the extremes would represent regions that had a similar selective pressure based on geographic similarity, or selective pressure that operated on a shared ancestral population. For the haplotypic methods, the proportion of regions that overlapped between populations was used to create the distance matrix for the hierarchical clustering. The groups created by the clustering were then assessed for the number of populations from a super population that were assigned the same cluster. Having all populations correctly grouped into their super population was only completely achieved by clustering using the lower tail of \gls{fwh}. If an allowance is made for the two \gls{amr} populations to be grouped with the \gls{eur} populations, as in the chromosomal F~ST~ clustering, then both haplotypic methods and six of the clustered tails of the frequency spectrum-based methods clustered populations into their respective super populations.
 
 ```{r proportion, results ='asis'}
 # prop_list[['td_neg']]$exclusivity %>% data.frame%>% mutate(pop = rownames(.)) %>% gather("cluster", "prop", 1:6) %>% filter(prop > 0) %>% group_by(pop) %>% summarise(mean(prop))
@@ -1007,7 +1006,7 @@ sum(GenomicRanges::width(GenomicRanges::reduce(gr_ihs[gr_ihs$pop %in% c("POL_SAM
 
 ```
 
-A similar approach as with clustering of the frequency spectrum-based statistics was used to investigate similarities in regions that had evidence of possible selection in the intra-population haplotypic based selection methods. To do this, the significant \gls{ihs} or \gls{nsl} results were clustered into regions (Table \@ref(tab:hapclustab)), and the percentage of bases overlapping between populations was calculated in these regions. The proportion of shared regions, based on region overlap, was used to cluster populations, given the total region that was significant for a single population. This was to investigate if there was a commonality between populations in the haplotypic regions that had evidence for selection, the hypothesis being that populations in similar geographic regions would have had a similar environmental exposure, and therefore have similar regions of the genome under selective pressure.
+A similar approach as with clustering of the frequency spectrum-based statistics was used to investigate similarities in regions that had evidence of possible selection in the intra-population haplotypic based selection methods. To do this, the significant \gls{ihs} or \gls{nsl} results were clustered into regions (Table \@ref(tab:hapclustab)), and the percentage of bases overlapping between populations was calculated in these regions. The proportion of shared regions, based on region overlap, was used to cluster populations, given the total region that was significant for a single population. This was to investigate if there was a commonality between populations in the haplotypic regions that had evidence for selection, the hypothesis being that populations in similar geographic regions would have had a similar environmental exposure, and therefore have similar regions of the genome under selective pressure. Another possibility was that the selective pressure was in a shared ancestral population.
 
 Clustering on the proportion of shared regions (see section \@ref(haplocluster)) for both \gls{ihs} (Figure \@ref(fig:ihsclust)) and \gls{nsl} (Figure \@ref(fig:nslclust)) grouped the individual populations into their super populations, with the exception of the \gls{amr} populations which were split into two separate groups. The order of populations differed due to each population having a different total for the size of region that was significant. Both \gls{ihs} and \gls{nsl} gave similar groupings and had similar proportions of selected regions shared.
 
